--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <img id="logo-img" src="" alt="里昂邮政集团LOGO" class="logo-img">
                 <div class="logo-text">
                     <h1>里昂邮政集团</h1>
-                    <p>LYON POSTAL GROUP - 连接你我，传递价值</p>
+                    <p>LYON POSTAL GROUP</p>
                 </div>
             </div>
             <div class="current-date" id="current-date">
